# RuoYi-Vue3-FastAPI-ADMIN-CP

./: .gitignore  RBAC互动式示例.md  RBAC可视化关系图.md  RBAC权限系统示例解析.md  数据库表架构关系.md  权限与部门关系终极解析.md  权限来源总结对比.md  权限管理系统深度解析.md  部门权限来源解析.md
.cline/: operations-log.md
.kilocode/rules/: kilo开发准则.md
ruoyi-fastapi-backend/: .dockerignore  .env.dev  .env.prod  Dockerfile  README.Docker.md  docker-compose.yml  postgres-redis-docker-compose.yml  pyproject.toml  server.py  部署说明.md
ruoyi-fastapi-backend/module_admin/entity/do/: job_do.py
ruoyi-fastapi-backend/sql/: CREATE-DATABASE-ruoyi_fastapi-v2.sql
