[project]
name = "ruoyi-fastapi-backend"
version = "1.0.0"
description = "RuoYi FastAPI Backend"
requires-python = ">=3.10"
# 公共依赖（两个版本都需要的）
dependencies = [
    "alembic==1.16.4",
    "APScheduler==3.11.0",
    "async-lru==2.0.5",
    "bcrypt==5.0.0",
    "DateTime==5.5",
    "fastapi[all]==0.116.1",
    "loguru==0.7.3",
    "openpyxl==3.1.5",
    "pandas==2.3.2",
    "Pillow==11.3.0",
    "psutil==7.0.0",
    "pydantic-validation-decorator==0.1.4",
    "PyJWT[crypto]==2.10.1",
    "redis==6.4.0",
    "SQLAlchemy[asyncio]==2.0.43",
    "sqlglot[rs]==27.8.0",
    "user-agents==2.2.0",
]

# 可选依赖组
[project.optional-dependencies]
postgres = [
    "asyncpg==0.30.0",
    "psycopg2==2.9.10",
]
mysql = [
    "asyncmy==0.2.10",
    "PyMySQL==1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []  # 不打包任何内容，这是一个应用项目

[tool.uv]
dev-dependencies = []
package = false  # 这是一个应用项目，不需要打包安装

